--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "name": "𝑱𝒂𝒑𝒂𝒏𝒆𝒔𝒆-𝑿-𝑼𝒔𝒆𝒓𝒃𝒐𝒕",
-  "description": "[𝑱𝒂𝒑𝒂𝒏𝒆𝒔𝒆-𝑿-𝑼𝒔𝒆𝒓𝒃𝒐𝒕] ωσяℓ∂ ℓαяgεsт αη∂ ғαsтεsт υsεявσт. ρσωεяε∂ вү 𝑱𝒂𝒑𝒂𝒏𝒆𝒔𝒆-𝑿-𝑼𝒔𝒆𝒓𝒃𝒐𝒕.",
-    "logo": "https://graph.org/file/ec99cb6dba229bd984537.jpg",
+  "name": "𝑵𝒂𝒓𝒖-𝑱𝒂𝒂𝒕-𝑼𝒔𝒆𝒓𝒃𝒐𝒕",
+  "description": "[𝑵𝒂𝒓𝒖-𝑱𝒂𝒂𝒕-𝑼𝒔𝒆𝒓𝒃𝒐𝒕] ωσяℓ∂ ℓαяgεsт αη∂ ғαsтεsт υsεявσт. ρσωεяε∂ вү 𝑱𝒂𝒑𝒂𝒏𝒆𝒔𝒆-𝑿-𝑼𝒔𝒆𝒓𝒃𝒐𝒕.",
+    "logo": "https://telegra.ph/file/6b0a0f76bf5660454ae89.jpg",
 
   "stack": "heroku-22",
   "env": {
